# omnyx

./: .gitignore  Cargo.toml  Dockerfile  README.md  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
crates/omnyx/: Cargo.toml
crates/omnyx/assets/js/libs/router/: fetch.ts  index.ts  transition.ts
crates/omnyx/assets/js/modules/navigation/: index.ts
crates/omnyx/src/: config.rs  lib.rs  main.rs
crates/omnyx/src/builder/: core.rs
crates/omnyx/src/builder/code/: core.rs
crates/omnyx/src/builder/code/types/: api.rs  extension.rs  group.rs  layout.rs  mod.rs  page.rs  special.rs
crates/omnyx/src/builder/router/: core.rs
crates/omnyx/src/builder/router/types/: api.rs  group.rs  macros.rs  mod.rs  page.rs  special.rs
crates/omnyx/src/builder/router/types/layout/: core.rs  parallel_route_node.rs
crates/omnyx/src/collections/: linear_map.rs  mod.rs
crates/omnyx/src/collections/bumpalo/: linear_map.rs  mod.rs
crates/omnyx/src/core/: core.rs  mod.rs
crates/omnyx/src/core/builder/: core.rs
crates/omnyx/src/core/engine/: mod.rs  pingora.rs
crates/omnyx/src/core/pingora/: core.rs  mod.rs  proxy.rs
crates/omnyx/src/core/pingora/handle_route/: core.rs  finalize_response.rs  mod.rs  public.rs
crates/omnyx/src/core/pingora/handle_route/render_pipeline/: core.rs  error.rs  (+3 more)
crates/omnyx/src/core/pingora/render_pipeline/: core.rs  error.rs  finalize_response.rs  middleware.rs  mod.rs  public.rs
crates/omnyx/src/core/router/: api_handler.rs  core.rs  matcher.rs  mod.rs  proxy.rs  route_node.rs
crates/omnyx/src/core/router/builder/: core.rs
crates/omnyx/src/core/router/handlers/: api.rs  core.rs  error.rs  layout.rs  loader.rs  macros.rs  mod.rs  not_found.rs  page.rs  special.rs
crates/omnyx/src/core/router/logic/: loader.rs  middleware.rs  mod.rs
crates/omnyx/src/core/router/matcher/: build.rs  core.rs  mod.rs
crates/omnyx/src/core/router/registry/: extensions.rs  mod.rs  parallel_route_node.rs  route_node.rs
crates/omnyx/src/core/router/request/: request_context.rs
crates/omnyx/src/core/router/response/: core.rs  init.rs  mod.rs  mutator.rs
crates/omnyx/src/core/router/tree/: core.rs
crates/omnyx/src/core/router/utils/: path.rs
crates/omnyx/src/error/: core.rs  route_error.rs
crates/omnyx/src/render/: mod.rs
crates/omnyx/src/render/components/: layout.rs  mod.rs  page.rs
crates/omnyx/src/types/: box_future.rs  mod.rs
(+232 files in other folders)
