[package]
name = "omnyx"
version = "0.0.14"
edition = "2024"
description = "Omnyx - Web Framework With Nextjs like Routing"
license = "MIT"
repository = "https://github.com/Farhan-Ali-Rajpoot/ridge-core/crates/omnyx"
readme = "README.md"


[dependencies]
# The core web engine
axum = "0.7"
tokio = { version = "1.50.0", features = ["full"] }
http = "1.4.0"
async-trait = "0.1.89"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3"
const_format = "0.2.35"
thiserror = "1"
matchit = "0.9.1"
bytes = "1.11.1"
pingora = { version = "0.8.0", features = [ "lb" ] }
cookie = "0.18.1"
parking_lot = "0.12.5"
mime_guess = "2.0.5"
include_dir = "0.7.4"

swc_ecma_parser = "39.0.1"
swc_ecma_codegen = "26.0.1"
swc_ecma_transforms_base = "42.0.0"
swc_ecma_transforms_typescript = "46.0.1"
swc_ecma_visit = "23.0.0"
lightningcss = "1.0.0-alpha.71"
